--- a/css/main.css
+++ b/css/main.css
@@ -10,104 +10,108 @@ ul, p, h1, h2, h3, h4, h5, h6{
 
 
 /* header css **************************************************************************** */
-header{
-    background-repeat: no-repeat; background-size: cover;
-    background-image: url('../images/lake_back.png');
-    display: flex; padding: 3.5%;
-}
-header .title-image{
-    width: 12%;
-}
-header .title-image img{
-    border-radius: 50%; width: 180px; position: absolute; left: 1%; top: 1%;
-}
-header .title-content{
-    width: 88%; font-size: 27px; color: wheat; font-weight: bold; 
-}
-/* responsive media queries for header */
-@media screen and (max-width : 600px) { 
     header{
-        flex-direction: column;
+        background-repeat: no-repeat; background-size: cover;
+        background-image: url('../images/lake_back.png');
+        display: flex; padding: 3.5%;
     }
-    header .title-image, header .title-content{
-        width: 100%; text-align: center;
+    header .title-image{
+        width: 12%;
     }
     header .title-image img{
-        position: relative;
+        border-radius: 50%; width: 180px; position: absolute; left: 1%; top: 1%;
     }
-}
-/* header css ********************************************************************************** */
+    header .title-content{
+        width: 88%; font-size: 27px; color: wheat; font-weight: bold; 
+    }
+    /* responsive media queries for header ******************************************** */
+    @media screen and (max-width : 600px) { 
+        header{
+            flex-direction: column;
+        }
+        header .title-image, header .title-content{
+            width: 100%; text-align: center;
+        }
+        header .title-image img{
+            position: relative;
+        }
+    }
+/* header css ********************************************************************************************/
 
 
-section{
-    display: flex; padding: 1%; background-color: #d2f6f6; justify-content:space-between;
-}
-.sidebar{
-    width: 22%; padding: 1%; background: #fff; padding-top: 2%;
-}
-.sidebar .sidebar-title{
-    background: blue; padding: 3%; border-radius: 15px 15px 0 0; color: wheat;
-}
-
-.sidebar ul{
-
-}
-.sidebar ul li{
-    margin: 1% 0% 1% 5%;
-}
-.sidebar ul li a{
-    display: block; padding: 2% 2% 2%; text-decoration: none; color: #01002a;
-    background: linear-gradient(45deg, lightblue, lightgreen);
-}
-.sidebar ul li a:hover{
-    background: linear-gradient(45deg, lightgreen, lightblue);
-}
-
-.main-container{
-    width: 73%; padding: 1%; background: #fff;
-}
-.main-container .welcome{
-
-}
-.main-container .welcome .welcome-title{
-    background-color: blue; padding: 1%; border-radius: 15px 15px 0 0; color: wheat; margin-bottom: 1%;
-}
-.main-container .welcome .welcome-content{
-
-}
-
-@media screen and (max-width : 600px) {
+/* main body section css ******************************************************************************** */
     section{
-        flex-direction: column;
+        display: flex; padding: 1%; background-color: #d2f6f6; justify-content:space-between;
     }
     .sidebar{
-        width: 98%; padding: 1%;
+        width: 22%; padding: 1%; background: #fff; padding-top: 2%;
     }
+    .sidebar .sidebar-title{
+        background: blue; padding: 3%; border-radius: 15px 15px 0 0; color: wheat;
+    }
+
+    /* .sidebar ul{
+
+    } */
+    .sidebar ul li{
+        margin: 1% 0% 1% 5%;
+    }
+    .sidebar ul li a{
+        display: block; padding: 2% 2% 2%; text-decoration: none; color: #01002a;
+        background: linear-gradient(45deg, lightblue, lightgreen);
+    }
+    .sidebar ul li a:hover{
+        background: linear-gradient(45deg, lightgreen, lightblue);
+    }
+
     .main-container{
-        width: 98%; padding: 1%;
+        width: 73%; padding: 1%; background: #fff;
     }
+    /* .main-container .welcome{
+
+    } */
     .main-container .welcome .welcome-title{
-        padding: 3%;;
+        background-color: blue; padding: 1%; border-radius: 15px 15px 0 0; color: wheat; margin-bottom: 1%;
     }
-}
+    /* .main-container .welcome .welcome-content{
+
+    } */
+
+    /* responsive media queries for main body section ****************** */
+    @media screen and (max-width : 600px) {
+        section{
+            flex-direction: column;
+        }
+        .sidebar{
+            width: 98%; padding: 1%;
+        }
+        .main-container{
+            width: 98%; padding: 1%;
+        }
+        .main-container .welcome .welcome-title{
+            padding: 3%;;
+        }
+    }
+/* main body section css ends ********************************************************************************** */
 
 
-
-footer{
-    background-color: #3676B6; padding: 2%; color: wheat; display: flex; justify-content: space-around;
-}
-footer .validator-block{
-    width: 50%;
-}
-footer .copyright-block{
-    width: 50%; text-align: right;
-}
-
-@media screen and (max-width : 600px) {
+/* footer section css starts ************************************************************************************* */
     footer{
-        flex-direction: column;
+        background-color: #3676B6; padding: 2%; color: wheat; display: flex; justify-content: space-around;
     }
-    footer .validator-block, footer .copyright-block{
-        width: 100%; text-align: center;
+    footer .validator-block{
+        width: 50%;
     }
-}
+    footer .copyright-block{
+        width: 50%; text-align: right;
+    }
+
+    @media screen and (max-width : 600px) {
+        footer{
+            flex-direction: column;
+        }
+        footer .validator-block, footer .copyright-block{
+            width: 100%; text-align: center;
+        }
+    }
+/* footer section css ends */
