--- a/w1d2aboutme/css/aboutmestyle.css
+++ b/w1d2aboutme/css/aboutmestyle.css
@@ -6,6 +6,11 @@ body{
 ul, ol, p, h1, h2, h3, h4, h5, h6{
     margin: 0; padding: 0;
 }
+
+.right{
+    float:right;
+}
+
 /* initial setup css for layout *********************************************************** */
 
 
@@ -13,13 +18,19 @@ ul, ol, p, h1, h2, h3, h4, h5, h6{
     header{
         background-repeat: no-repeat; background-size: cover;
         background-image: url('../images/lake_back.png');
-        padding: 1%;
+        padding: 2%; width: 96%;
         font-size: 27px; color: wheat; font-weight: bold; text-align: center;
     }
 
     header span{
         font-size: 20px; color: yellow;
     }
+    @media screen and (max-width : 650px) {
+        header{
+            padding: 6%; width: 88%;
+        }
+    }
+    
     
 /* header css ********************************************************************************************/
 
@@ -44,6 +55,11 @@ ul, ol, p, h1, h2, h3, h4, h5, h6{
     .course-list ul li a:hover{
         background-color: lightyellow;
     }
+    @media screen and (max-width : 650px) {
+        .article-title{ padding: 3%; }
+        .course-list ul li a{ width: 94%; padding: 3%; }
+    }
+
 
     .fav-movies{
         width: 96%; background-color: white; padding: 1%; margin: 1%;
@@ -65,6 +81,10 @@ ul, ol, p, h1, h2, h3, h4, h5, h6{
     }
     .fav-movies ol li:hover{
         box-shadow: 5px 5px 50px grey;
+    }
+    @media screen and (max-width : 650px) {
+        .fav-movies ol li{ padding: 3%; list-style: none; }
+        .course-list ul li a{ width: 94%; padding: 3%; }
     }
 
     .my-moods{
@@ -106,7 +126,7 @@ ul, ol, p, h1, h2, h3, h4, h5, h6{
             flex-direction: column;
         }
         .my-neighbor div div{
-            width: 100%;
+            width: 95%; padding: 2%;
         }
     }
 
@@ -124,12 +144,12 @@ ul, ol, p, h1, h2, h3, h4, h5, h6{
         width: 50%; text-align: right;
     }
 
-    @media screen and (max-width : 600px) {
+    @media screen and (max-width : 650px) {
         footer{
             flex-direction: column;
         }
         footer .validator-block, footer .copyright-block{
-            width: 100%; text-align: center;
+            width: 96%; text-align: center; margin: 2%;
         }
     }
 /* footer section css */
