--- a/w1d2recipe/css/recipe.css
+++ b/w1d2recipe/css/recipe.css
@@ -36,6 +36,10 @@ h1{
     background-image: url("../images/pie_icon.gif"); background-repeat: no-repeat;
     list-style: none; padding-left: 3%;
 }
+.directions p span{
+    /* -webkit-text-stroke:1px black; */
+    text-decoration: line-through;
+}
 
 .user-comments{
 
